crates/ars-components/src/selection/context_menu/snapshots/ars_components__selection__context_menu__tests__context_menu_sub_trigger_open.snap
---
source: crates/ars-components/src/selection/context_menu/mod.rs
expression: "snapshot_attrs(&api.sub_trigger_attrs(&key(\"delta\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-highlighted",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "sub-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "context-menu",
            ),
        ),
        (
            Aria(
                Expanded,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                HasPopup,
            ),
            String(
                "menu",
            ),
        ),
        (
            Aria(
                Controls,
            ),
            String(
                "context-menu-sub-content-delta",
            ),
        ),
        (
            Id,
            String(
                "context-menu-item-delta",
            ),
        ),
        (
            Role,
            String(
                "menuitem",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
