crates/ars-components/src/selection/context_menu/snapshots/ars_components__selection__context_menu__tests__context_menu_target_open.snap
---
source: crates/ars-components/src/selection/context_menu/mod.rs
expression: snapshot_attrs(&api.target_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "target",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "context-menu",
            ),
        ),
        (
            Aria(
                Expanded,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                HasPopup,
            ),
            String(
                "menu",
            ),
        ),
        (
            Aria(
                Controls,
            ),
            String(
                "context-menu-content",
            ),
        ),
        (
            Id,
            String(
                "context-menu-target",
            ),
        ),
    ],
    styles: [],
}
